# DataLab

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.py  run_pipeline.py  run_variant.py
.specstory/: .project.json  statistics.json
logs/: slurm_K2_B100.err  slurm_K2_B100.out  slurm_batch_B1024.err  slurm_batch_B1024.out  slurm_batch_B128.err  slurm_batch_B128.out  slurm_batch_B256.err  slurm_batch_B256.out  slurm_hard_wta.err  slurm_hard_wta.out  slurm_ksweep_K2.err  slurm_ksweep_K2.out  slurm_ksweep_K8.err  slurm_ksweep_K8.out  slurm_ksweep_ann_K2.err  slurm_ksweep_ann_K2.out  slurm_ksweep_ann_K3.err  slurm_ksweep_ann_K3.out  slurm_ksweep_ann_K6.err  slurm_ksweep_ann_K6.out  slurm_ksweep_ann_K8.err  slurm_ksweep_ann_K8.out  slurm_ksweep_res_K2.err  slurm_ksweep_res_K2.out  slurm_ksweep_res_K3.err  slurm_ksweep_res_K3.out  slurm_ksweep_res_K6.err  slurm_ksweep_res_K6.out  slurm_ksweep_res_K8.err  slurm_ksweep_res_K8.out  slurm_relaxed_wta.err  slurm_relaxed_wta.out  slurm_resilient_mcl.err  slurm_resilient_mcl.out  slurm_run.err  slurm_run.out
outputs/: OVERNIGHT_FULL_SUMMARY.md  SYMMETRY_PROBE_vs_DIFFUSION.md  V9_SYMMETRY_PROBE_REPORT.md
refs/: idea.tex  routers.aux  routers.out  routers.tex
scripts/: freeze_v8_positive_control.py  gold_repro_legacy.py  rf_mcl_cifar_expert_training_v2.py  rf_mcl_cifar_v3_router.py  rf_mcl_cifar_v5_router.py  rf_mcl_gmm_expert_training_v3.py  rf_mcl_gmm_v4_router.py  rf_mcl_gmm_v5_router.py  rf_mcl_mnist_v1_router.py  rf_mcl_phase_diagram_corrected.py  rf_mcl_phase_diagram_experiments.py  run_all.py  (+8 more)
(+848 files in other folders)
