[project]
name = "datalab"
version = "0.1.0"
description = "Mixture score-based diffusion experiments"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
